@@ -34,6 +34,7 @@
 * Fixed bug in Issue.for_repo preventing listing of issues without
   milestone (#49,#53 Michael Grünewald)
 * A new jar command, git-list-issues, has been added to print issues for a repo
+* A new jar command, git-search, has been added to search GitHub
 * Filter.state now includes `All constructor (#59,#62 Michael Grünewald)
 * pull_ref type added from which pull now inherits
 * issue_pull_request optional field of pull_ref type added
